# bija-tools

./: .gitignore  BIJA_MONETIZATION_HANDBOOK.md  BIJA_MONETIZATION_SKILL.md  BIJA_SKILL.md  CLAUDE.md  CROSS_POLLINATION_INBOX.md  CROSS_POLLINATION_OUTBOX.md  DOMAIN_IDENTITY.md  DOMAIN_METRICS.md  GOAL.md  LOOP_BOOTSTRAP.md  MAXSF_CYCLE_01.md  MAXSF_CYCLE_02.md  MAXSF_CYCLE_03.md  MAXSF_CYCLE_04.md  MAXSF_CYCLE_05.md  MAXSF_CYCLE_06.md  MAXSF_CYCLE_07.md  MAXSF_CYCLE_08.md  MAXSF_CYCLE_09.md  MAXSF_CYCLE_10.md  MAXSF_CYCLE_11.md  MAXSF_CYCLE_12.md  MAXSF_CYCLE_13.md  MAXSF_CYCLE_14.md  MAXSF_CYCLE_15.md  MAXSF_CYCLE_16.md  MAXSF_CYCLE_17.md  MAXSF_CYCLE_18.md  MAXSF_CYCLE_19.md  PHASE0_FINAL_REPORT.md  README_TOOLS.md  SESSION_CONTINUITY.md  TIME_GROUND_TRUTH.md  ai_stock_strategy_framework.py  asset_inventory.md  asset_inventory_v2_expanded.md  auto_publisher.py  bija_tools_tutorial.md  capability_gap_log.md  (+41 more)
.github/: FUNDING.yml
bija_tools/: __init__.py  cli.py  web_app.py
content/: bikeng_24_solvent_effects.md  en_bija_tools_landing.md  zhihu_43_elf_pitfalls.md  zhihu_45_dos_pitfalls.md  zhihu_59_避坑23_范德华修正陷阱.douyin.json  zhihu_59_避坑23_范德华修正陷阱.md  zhihu_61_盐选专栏投稿正式评估.md  zhihu_62_避坑25_能带K点路径陷阱.douyin.json  zhihu_62_避坑25_能带K点路径陷阱.md  zhihu_63_避坑26_DOS_SMEAR展宽陷阱.douyin.json  zhihu_63_避坑26_DOS_SMEAR展宽陷阱.md  zhihu_64_避坑27_振动频率声子谱高阶陷阱.douyin.json  zhihu_64_避坑27_振动频率声子谱高阶陷阱.md  zhihu_65_避坑28_功函数表面偶极矩陷阱.douyin.json  zhihu_65_避坑28_功函数表面偶极矩陷阱.md  zhihu_66_避坑29_吸附能计算陷阱.douyin.json  zhihu_66_避坑29_吸附能计算陷阱.md  zhihu_67_避坑30_Bader电荷分析陷阱.douyin.json  zhihu_67_避坑30_Bader电荷分析陷阱.md  (+10 more)
(+155 files in other folders)
